--- a/src/index.html
+++ b/src/index.html
@@ -1,106 +1,252 @@
 <!DOCTYPE html>
 <html lang="zh-cmn-Hans">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>理财网站</title>
 </head>
+
 <body>
-<!--[if lte IE 8]>
+    <!--[if lte IE 8]>
 <p class="browser-upgrade">你的浏览器太老了，请<a href="https://browsehappy.com">点击</a>更新</p>
 <![endif]-->
-<header>
-    <nav class="top" id="top">
-        <span class="tel">理财热线：400-888-888</span>
+    <header>
+        <nav class="top" id="top">
+            <span class="tel">理财热线：400-888-888</span>
+            <ul>
+                <li><a href="#">登录</a></li>
+                <li><a href="#">快速注册</a></li>
+                <li><a href="#">关于</a></li>
+                <li><a href="#">帮助</a></li>
+                <li><a href="#">APP下载</a></li>
+            </ul>
+        </nav>
+        <nav class="main">
+            <a href="#" class="brand"><img src="./img/logo@1x.png" alt="logo"></a>
+            <ul>
+                <li><a href="#">首页</a></li>
+                <li><a href="#">理财频道</a></li>
+                <li><a href="#">投资频道</a></li>
+                <li><a href="#">新手专区</a></li>
+                <li><a href="#">安全保障</a></li>
+            </ul>
+        </nav>
+    </header>
+    <div class="container">
+        <div class="transaction">
+            <div class="trans-content">
+                <div class="trans-data">
+                    <span>平台累积成交金额</span>
+                    <span class="trans-money">9998</span>
+                    <span>万元</span>
+                </div>
+                <div class="trans-data">
+                    <span>过去7日成交金额</span>
+                    <span class="trans-money">17998</span>
+                    <span>万元</span>
+                </div>
+                <div class="trans-report">
+                    <a href="#">查看平台运营报告</a>
+                </div>
+            </div>
+        </div>
+        <div class="ad">
+            <div class="item">
+                <img src="./img/ad001.png" alt="">
+            </div>
+            <div class="item">
+                <img src="./img/ad002.png" alt="">
+            </div>
+            <div class="item">
+                <img src="./img/ad003.png" alt="">
+            </div>
+        </div>
+        <section class="feature">
+            <div class="item">
+                <h3>安全</h3>
+                <p>国家AAA信用平台<br>银行资金托管<br>上市公司背景保证</p>
+            </div>
+            <div class="item">
+                <h3>权威</h3>
+                <p>仰视电视台推荐<br>互联网百强企业<br>标准起草单位</p>
+            </div>
+            <div class="item">
+                <h3>省心</h3>
+                <p>100元起投<br>用户利益保障机制<br>保险公司承担</p>
+            </div>
+        </section>
+        <div class="notice">
+            <a href="#"><span>2018-12-31</span>元旦期间业务受理及值班公告元旦期间业务受理及值班公告元旦期间业务受理及值班公告</a>
+            <a href="#" class="more">更多公告</a>
+        </div>
+        <section class="product">
+            <h2>
+                固定期限产品
+                <em>甄选优质基金</em>
+                <em>省时省力</em>
+                <em>坐等收益</em>
+            </h2>
+            <div class="product-content">
+                <div class="item">
+                    <h3><em>3</em>个月</h3>
+                    <div class="info">
+                        <p>约定年化收益率: <span class="year-rate">3.50%</span><i>起</i></p>
+                        <p>总成交金额: <span class="money">1880</span><i>万元</i></p>
+                    </div>
+                    <div class="buy">
+                        <a href="#">购买</a>
+                    </div>
+                </div>
+                <div class="item">
+                    <h3><em>3</em>个月</h3>
+                    <div class="info">
+                        <p>约定年化收益率: <span class="year-rate">3.50%</span><i>起</i></p>
+                        <p>总成交金额: <span class="money">1880</span><i>万元</i></p>
+                    </div>
+                    <div class="buy">
+                        <a href="#">购买</a>
+                    </div>
+                </div>
+                <div class="item">
+                    <h3><em>3</em>个月</h3>
+                    <div class="info">
+                        <p>约定年化收益率: <span class="year-rate">3.50%</span><i>起</i></p>
+                        <p>总成交金额: <span class="money">1880</span><i>万元</i></p>
+                    </div>
+                    <div class="buy">
+                        <a href="#">购买</a>
+                    </div>
+                </div>
+                <div class="item">
+                    <h3><em>3</em>个月</h3>
+                    <div class="info">
+                        <p>约定年化收益率: <span class="year-rate">3.50%</span><i>起</i></p>
+                        <p>总成交金额: <span class="money">1880</span><i>万元</i></p>
+                    </div>
+                    <div class="buy">
+                        <a href="#">购买</a>
+                    </div>
+                </div>
+                <div class="item">
+                    <h3><em>3</em>个月</h3>
+                    <div class="info">
+                        <p>约定年化收益率: <span class="year-rate">3.50%</span><i>起</i></p>
+                        <p>总成交金额: <span class="money">1880</span><i>万元</i></p>
+                    </div>
+                    <div class="buy">
+                        <a href="#">购买</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="product">
+            <h2>
+                固定期限产品
+                <em>甄选优质基金</em>
+                <em>省时省力</em>
+                <em>坐等收益</em>
+            </h2>
+            <div class="product-content">
+                <div class="item">
+                    <h3><em>3</em>个月</h3>
+                    <div class="info">
+                        <p>约定年化收益率: <span class="year-rate">3.50%</span><i>起</i></p>
+                        <p>总成交金额: <span class="money">1880</span><i>万元</i></p>
+                    </div>
+                    <div class="buy">
+                        <a href="#">购买</a>
+                    </div>
+                </div>
+                <div class="item">
+                    <h3><em>3</em>个月</h3>
+                    <div class="info">
+                        <p>约定年化收益率: <span class="year-rate">3.50%</span><i>起</i></p>
+                        <p>总成交金额: <span class="money">1880</span><i>万元</i></p>
+                    </div>
+                    <div class="buy">
+                        <a href="#">购买</a>
+                    </div>
+                </div>
+                <div class="item">
+                    <h3><em>3</em>个月</h3>
+                    <div class="info">
+                        <p>约定年化收益率: <span class="year-rate">3.50%</span><i>起</i></p>
+                        <p>总成交金额: <span class="money">1880</span><i>万元</i></p>
+                    </div>
+                    <div class="buy">
+                        <a href="#">购买</a>
+                    </div>
+                </div>
+                <div class="item">
+                    <h3><em>3</em>个月</h3>
+                    <div class="info">
+                        <p>约定年化收益率: <span class="year-rate">3.50%</span><i>起</i></p>
+                        <p>总成交金额: <span class="money">1880</span><i>万元</i></p>
+                    </div>
+                    <div class="buy">
+                        <a href="#">购买</a>
+                    </div>
+                </div>
+                <div class="item">
+                    <h3><em>3</em>个月</h3>
+                    <div class="info">
+                        <p>约定年化收益率: <span class="year-rate">3.50%</span><i>起</i></p>
+                        <p>总成交金额: <span class="money">1880</span><i>万元</i></p>
+                    </div>
+                    <div class="buy">
+                        <a href="#">购买</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <nav class="footer">
+            <div class="footer-content">
+                <p class="brand"></p>
+                <ul>
+                    <li class="title">公司介绍</li>
+                    <li><a href="#">公司介绍</a></li>
+                    <li><a href="#">业务模式</a></li>
+                    <li><a href="#">合作机构</a></li>
+                    <li><a href="#">服务协议</a></li>
+                </ul>
+                <ul>
+                    <li class="title">风险防范</li>
+                    <li><a href="#">账户安全</a></li>
+                    <li><a href="#">安全保障</a></li>
+                </ul>
+                <ul>
+                    <li class="title">理财产品</li>
+                    <li><a href="#">固定期限</a></li>
+                    <li><a href="#">债券/散标</a></li>
+                </ul>
+                <ul>
+                    <li class="title">交易帮助</li>
+                    <li><a href="#">购买</a></li>
+                    <li><a href="#">赎回</a></li>
+                    <li><a href="#">体现</a></li>
+                </ul>
+                <ul>
+                    <li class="title">机构服务</li>
+                    <li><a href="#">机构中心</a></li>
+                    <li><a href="#">合作联系</a></li>
+                </ul>
+            </div>
+        </nav>
+    </div>
+    <footer>
         <ul>
-            <li><a href="#">登录</a></li>
-            <li><a href="#">快速注册</a></li>
-            <li><a href="#">关于</a></li>
-            <li><a href="#">帮助</a></li>
-            <li><a href="#">APP下载</a></li>
+            <li><span class="icon icon-zfywxk">支付业务许可证</span></li>
+            <li><span class="icon icon-pcirk">PCI认证</span></li>
+            <li><span class="icon icon-visayz">Visa验证</span></li>
+            <li><span class="icon icon-vsjmfw">VerSign加密服务</span></li>
+            <li><span class="icon icon-wlgs">网络工商</span></li>
+            <li><span class="icon icon-rzcx">电子商务协会认证诚信网</span></li>
+            <li><span class="icon icon-gs">北京工商</span></li>
         </ul>
-    </nav>
-    <nav class="main">
-        <a href="#" class="brand"><img src="./img/logo@1x.png" alt="logo"></a>
-        <ul>
-            <li><a href="#">首页</a></li>
-            <li><a href="#">理财频道</a></li>
-            <li><a href="#">投资频道</a></li>
-            <li><a href="#">新手专区</a></li>
-            <li><a href="#">安全保障</a></li>
-        </ul>
-    </nav>
-</header>
-<div class="container">
-    <section class="transaction">
-        <div class="trans-content">
-            <div class="trans-data">
-                <span>平台累积成交金额</span>
-                <span class="trans-money">9998</span>
-                <span>万元</span>
-            </div>
-            <div class="trans-data">
-                <span>过去7日成交金额</span>
-                <span class="trans-money">17998</span>
-                <span>万元</span>
-            </div>
-            <div class="trans-report">
-                <a href="#">查看平台运营报告</a>
-            </div>
-        </div>
-    </section>
-
-    <section class="ad">
-        <div class="item">
-            <img src="./img/ad001.png" alt="">
-        </div>
-        <div class="item">
-            <img src="./img/ad002.png" alt="">
-        </div>
-        <div class="item">
-            <img src="./img/ad003.png" alt="">
-        </div>
-    </section>
-    <section class="feature">
-        <div class="item">
-            <h3>安全</h3>
-            <p>国家AAA信用平台<br>银行资金托管<br>上市公司背景保证</p>
-        </div>
-        <div class="item">
-            <h3>权威</h3>
-            <p>仰视电视台推荐<br>互联网百强企业<br>标准起草单位</p>
-        </div>
-        <div class="item">
-            <h3>省心</h3>
-            <p>100元起投<br>用户利益保障机制<br>保险公司承担</p>
-        </div>
-    </section>
-    <section class="notice">
-        <a href="#"><span>2018-12-31</span>元旦期间业务受理及值班公告元旦期间业务受理及值班公告元旦期间业务受理及值班公告</a>
-        <a href="#" class="more">更多公告</a>
-    </section>
-    <section class="product">
-
-    </section>
-    <section class="product">
-
-    </section>
-    <section class="footer">
-        
-    </section>
-</div>
-<footer>
-    <ul>
-        <li><span class="icon icon-zfywxk">支付业务许可证</span></li>
-        <li><span class="icon icon-pcirk">PCI认证</span></li>
-        <li><span class="icon icon-visayz">Visa验证</span></li>
-        <li><span class="icon icon-vsjmfw">VerSign加密服务</span></li>
-        <li><span class="icon icon-wlgs">网络工商</span></li>
-        <li><span class="icon icon-rzcx">电子商务协会认证诚信网</span></li>
-        <li><span class="icon icon-gs">北京工商</span></li>
-    </ul>
-    <p>北京某互联网金融公司 版权所有 &reg; 2018-2019</p>
-</footer>
+        <p>北京某互联网金融公司 版权所有 &reg; 2018-2019</p>
+    </footer>
 </body>
+
 </html>
