add a part of style and change HTML

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>理财网站</title>
+    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 
 <body>
@@ -77,8 +79,8 @@
                 <p>100元起投<br>用户利益保障机制<br>保险公司承担</p>
             </div>
         </section>
-        <div class="notice">
-            <a href="#"><span>2018-12-31</span>元旦期间业务受理及值班公告元旦期间业务受理及值班公告元旦期间业务受理及值班公告</a>
+        <div class="notice clearfix">
+            <a href="#"><span>2018-12-31</span>元旦期间业务受理及值班公告元旦期间业务受理及值班公告元旦期间业务受理及值班公告公告元旦期间业务受理及值班公告公告元旦期间业务受理及值班公告公告元旦期间业务受理及值班公告</a>
             <a href="#" class="more">更多公告</a>
         </div>
         <section class="product">
