finish the RWD and carousel

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,10 @@
     <title>理财网站</title>
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="js/vendor/owl.carousel.2.1.0/assets/owl.carousel.min.css">
+    <link rel="stylesheet" href="js/vendor/owl.carousel.2.1.0/assets/owl.theme.default.min.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="shortcut icon" href="favicon.ico">
 </head>
 
 <body>
@@ -55,14 +59,28 @@
             </div>
         </div>
         <div class="ad">
-            <div class="item">
-                <img src="./img/ad001.png" alt="">
-            </div>
-            <div class="item">
-                <img src="./img/ad002.png" alt="">
-            </div>
-            <div class="item">
-                <img src="./img/ad003.png" alt="">
+            <div class="owl-carousel owl-theme">
+                <div class="item">
+                    <picture>
+                        <source srcset="img/ad001-l.png" media="(min-width:50em)">
+                        <source srcset="img/ad001-m.png" media="(min-width:30em)">
+                        <img src="img/ad001.png" alt="2015年度报告">
+                    </picture>
+                </div>
+                <div class="item">
+                    <picture>
+                        <source srcset="img/ad002-l.png" media="(min-width: 50em)">
+                        <source srcset="img/ad002-m.png" media="(min-width: 30em)">
+                        <img srcset="img/ad002.png" alt="新年红包">
+                    </picture>
+                </div>
+                <div class="item">
+                    <picture>
+                        <source srcset="img/ad003-l.png" media="(min-width: 50em)">
+                        <source srcset="img/ad003-m.png" media="(min-width: 30em)">
+                        <img srcset="img/ad003.png" alt="新手秘籍">
+                    </picture>
+                </div>
             </div>
         </div>
         <section class="feature">
@@ -83,7 +101,7 @@
             <a href="#"><span>2018-12-31</span>元旦期间业务受理及值班公告元旦期间业务受理及值班公告元旦期间业务受理及值班公告公告元旦期间业务受理及值班公告公告元旦期间业务受理及值班公告公告元旦期间业务受理及值班公告</a>
             <a href="#" class="more">更多公告</a>
         </div>
-        <section class="product">
+        <section class="product clearfix">
             <h2>
                 固定期限产品
                 <em>甄选优质基金</em>
@@ -91,7 +109,7 @@
                 <em>坐等收益</em>
             </h2>
             <div class="product-content">
-                <div class="item">
+                <div class="item clearfix">
                     <h3><em>3</em>个月</h3>
                     <div class="info">
                         <p>约定年化收益率: <span class="year-rate">3.50%</span><i>起</i></p>
@@ -101,7 +119,7 @@
                         <a href="#">购买</a>
                     </div>
                 </div>
-                <div class="item">
+                <div class="item clearfix">
                     <h3><em>3</em>个月</h3>
                     <div class="info">
                         <p>约定年化收益率: <span class="year-rate">3.50%</span><i>起</i></p>
@@ -111,7 +129,7 @@
                         <a href="#">购买</a>
                     </div>
                 </div>
-                <div class="item">
+                <div class="item clearfix">
                     <h3><em>3</em>个月</h3>
                     <div class="info">
                         <p>约定年化收益率: <span class="year-rate">3.50%</span><i>起</i></p>
@@ -121,7 +139,7 @@
                         <a href="#">购买</a>
                     </div>
                 </div>
-                <div class="item">
+                <div class="item clearfix">
                     <h3><em>3</em>个月</h3>
                     <div class="info">
                         <p>约定年化收益率: <span class="year-rate">3.50%</span><i>起</i></p>
@@ -131,7 +149,7 @@
                         <a href="#">购买</a>
                     </div>
                 </div>
-                <div class="item">
+                <div class="item clearfix">
                     <h3><em>3</em>个月</h3>
                     <div class="info">
                         <p>约定年化收益率: <span class="year-rate">3.50%</span><i>起</i></p>
@@ -143,7 +161,7 @@
                 </div>
             </div>
         </section>
-        <section class="product">
+        <section class="product clearfix">
             <h2>
                 固定期限产品
                 <em>甄选优质基金</em>
@@ -151,7 +169,7 @@
                 <em>坐等收益</em>
             </h2>
             <div class="product-content">
-                <div class="item">
+                <div class="item clearfix">
                     <h3><em>3</em>个月</h3>
                     <div class="info">
                         <p>约定年化收益率: <span class="year-rate">3.50%</span><i>起</i></p>
@@ -161,7 +179,7 @@
                         <a href="#">购买</a>
                     </div>
                 </div>
-                <div class="item">
+                <div class="item clearfix">
                     <h3><em>3</em>个月</h3>
                     <div class="info">
                         <p>约定年化收益率: <span class="year-rate">3.50%</span><i>起</i></p>
@@ -171,7 +189,7 @@
                         <a href="#">购买</a>
                     </div>
                 </div>
-                <div class="item">
+                <div class="item clearfix">
                     <h3><em>3</em>个月</h3>
                     <div class="info">
                         <p>约定年化收益率: <span class="year-rate">3.50%</span><i>起</i></p>
@@ -181,7 +199,7 @@
                         <a href="#">购买</a>
                     </div>
                 </div>
-                <div class="item">
+                <div class="item clearfix">
                     <h3><em>3</em>个月</h3>
                     <div class="info">
                         <p>约定年化收益率: <span class="year-rate">3.50%</span><i>起</i></p>
@@ -191,7 +209,7 @@
                         <a href="#">购买</a>
                     </div>
                 </div>
-                <div class="item">
+                <div class="item clearfix">
                     <h3><em>3</em>个月</h3>
                     <div class="info">
                         <p>约定年化收益率: <span class="year-rate">3.50%</span><i>起</i></p>
@@ -204,7 +222,7 @@
             </div>
         </section>
         <nav class="footer">
-            <div class="footer-content">
+            <div class="footer-content clearfix">
                 <p class="brand"></p>
                 <ul>
                     <li class="title">公司介绍</li>
