optimize the file size.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="js/vendor/owl.carousel.2.1.0/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="js/vendor/owl.carousel.2.1.0/assets/owl.theme.default.min.css">
-    <link rel="stylesheet" href="css/main.css">
     <link rel="shortcut icon" href="favicon.ico">
 </head>
 
@@ -41,7 +40,7 @@
         </nav>
     </header>
     <div class="container">
-        <div class="transaction">
+        <div class="transaction clearfix">
             <div class="trans-content">
                 <div class="trans-data">
                     <span>平台累积成交金额</span>
@@ -267,6 +266,10 @@
         </ul>
         <p>北京某互联网金融公司 版权所有 &reg; 2018-2019</p>
     </footer>
+    <script src="js/vendor/jquery.min.js"></script>
+    <script src="js/vendor/owl.carousel.2.1.0/owl.carousel.min.js"></script>
+    <script src="js/vendor/picturefill.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
